<resources>
    <string name="app_name">NasaImage</string>
    <string name="request">введите запрос</string>
    <string name="yesterday">yesterday</string>
    <string name="today">today</string>
    <string name="before_yesterday">before yesterday</string>
    <string name="NASA">NASA</string>
    <string name="open_info">Open info</string>
    <string name="set_default_theme">Set default theme</string>
    <string name="set_blue_theme">Set blue theme</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="notes">notes</string>
    <string name="add_note">Add note</string>
    <string name="notes_title">Notes</string>
    <string name="add_title_for_your_note">Add title for your note</string>
    <string name="add_note_content">Add note content</string>
</resources>