<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:id="@+id/settings_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/settings_toolbar"
            app:title="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <RadioButton
            android:id="@+id/default_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/set_default_theme" />

        <RadioButton
            android:id="@+id/blue_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/black"
            android:text="@string/set_blue_theme"
            />
    </RadioGroup>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_smile"
        android:elevation="10dp"
        app:backgroundTint="?attr/myOrangeColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/fab_btn1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/oval_shape"
        android:elevation="5dp"
        android:src="@drawable/ic_baseline_home_24"
        app:layout_constraintCircle="@id/fab"
        app:layout_constraintCircleAngle="270"
        app:layout_constraintCircleRadius="0dp" />

    <ImageButton
        android:id="@+id/fab_btn2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/oval_shape"
        android:elevation="5dp"
        android:src="@drawable/ic_wikipedia"
        app:layout_constraintCircle="@id/fab"
        app:layout_constraintCircleAngle="315"
        app:layout_constraintCircleRadius="0dp" />

    <ImageButton
        android:id="@+id/fab_btn3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/oval_shape"
        android:elevation="5dp"
        android:src="@drawable/ic_settings"
        app:layout_constraintCircle="@id/fab"
        app:layout_constraintCircleAngle="360"
        app:layout_constraintCircleRadius="0dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="fab_btn1,fab_btn2,fab_btn3" />

</androidx.constraintlayout.widget.ConstraintLayout>